--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -7,9 +7,9 @@
     android:orientation="vertical">
 
     <Button
-        android:id="@+id/get_file_button"
+        android:id="@+id/copy_file_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="get file"/>
+        android:text="copy string to file"/>
 
 </LinearLayout>
